<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Ovulation Calculator</string>
    <string name="write_your_symptoms_here">Write your symptoms here</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="select_period_date">Select Period Date</string>
    <string name="save">Save</string>
    <string name="empty">Empty</string>
    <string name="blog">Blog</string>
    <string name="recommended">Recommended</string>
    <string name="discover">Discover</string>
    <string name="liked">Liked</string>
    <string name="recent">Recent</string>
    <string name="calendar">Calendar</string>
    <string name="edit_period">Edit Period</string>
    <string name="next_period">Next Period</string>
    <string name="next_ovulation">Next Ovulation</string>
    <string name="chances_of_pregnancy">Chances of Pregnancy</string>
    <string name="log_your_symptoms">Log your symptoms</string>
    <string name="where_does_your_last_period_start">Where does your last period start?</string>
    <string name="back">Back</string>
    <string name="get_started">Get Started</string>
    <string name="how_long_is_your_menstrual_cycle">How long is your menstrual cycle?</string>
    <string name="the_duration_of_period_start_date_usually_21_35_days_days">The duration of period start date, usually 21–35 days.</string>
    <string name="cycle_length">Cycle Length</string>
    <string name="next">Next</string>
    <string name="how_long_is_your_period">How long is your period?</string>
    <string name="bleeding_usually_lasts_between_4_7_days">Bleeding usually lasts between 4–7 days.</string>
    <string name="period_length">Period Length</string>
    <string name="settings">Settings</string>
    <string name="menstrual_cycle">Menstrual Cycle</string>
    <string name="luteal_phase">Luteal Phase</string>
    <string name="recalculate">Recalculate</string>
    <string name="themes">Themes</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_us">Share Us</string>
    <string name="feedback">Feedback</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="are_you_enjoying_our_app_your_opinion_matter_us">Are you enjoying our app? Your opinion matter us.</string>
    <string name="delete_confirmation">Delete Confirmation</string>
    <string name="are_you_sure_you_want_to_delete_this_history">Are you sure you want to delete this history?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="deleted_successfully">Deleted Successfully</string>
    <string name="updated_successfully">Updated Successfully</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit?</string>
    <string name="saved_successfully">Saved Successfully</string>
    <string name="please_fill_all_fields">Please fill all fields</string>
    <string name="days_left">Days Left</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="very_low">Very Low</string>
    <string name="anxiety_and_depression">Anxiety and Depression</string>
    <string name="pain_managment">Pain Management</string>
    <string name="boost_intimacy">Boost Intimacy</string>
    <string name="birth_control">Birth Control</string>
    <string name="sex_worries">Sex Worries</string>
    <string name="mental_stress">Mental Stress</string>
    <string name="healthy_eating">Healthy Stress</string>
    <string name="yoga_and_exercise">Yoga and Exercise</string>
    <string name="increase_fertility">Increase Fertility</string>
    <string name="sexual_health">Sexual Health</string>
    <string name="hormonal_health">Hormonal Health</string>
    <string name="menstrual_pain">Menstrual Pain</string>
    <string name="high_bleeding_and_hormonal_imbalance">High Bleeding and Hormonal Imbalance</string>
    <string name="high_bleeding">High Bleeding</string>
    <string name="stress_and_menstrual_cycle">Stress and Menstrual Cycle</string>
    <string name="pain_in_fertility_test">Pain in Fertility Test</string>
    <string name="juice_during_period">Jiuce During Period</string>
    <string name="menstrual_cramps">Menstrual Cramps</string>
    <string name="normal_discharge_time">Normal Discharge Time</string>
    <string name="female_reproductive">Female Reproductive</string>
    <string name="pms_symptoms">PMS Symptoms</string>
    <string name="fertile_days">Fertile days</string>
    <string name="safe_days">Safe days</string>
    <string name="days">days</string>


    <string name="cv_app_name">CalendarView</string>
    <string-array name="lunar_first_of_month">
        <item>春节</item>
        <item>二月</item>
        <item>三月</item>
        <item>四月</item>
        <item>五月</item>
        <item>六月</item>
        <item>七月</item>
        <item>八月</item>
        <item>九月</item>
        <item>十月</item>
        <item>冬月</item>
        <item>腊月</item>
    </string-array>

    <string-array name="tradition_festival">
        <item>除夕</item>
        <item>0101春节</item>
        <item>0115元宵</item>
        <item>0505端午</item>
        <item>0707七夕</item>
        <item>0815中秋</item>
        <item>0909重阳</item>
    </string-array>

    <string-array name="lunar_str">
        <item>初一</item>
        <item>初二</item>
        <item>初三</item>
        <item>初四</item>
        <item>初五</item>
        <item>初六</item>
        <item>初七</item>
        <item>初八</item>
        <item>初九</item>
        <item>初十</item>
        <item>十一</item>
        <item>十二</item>
        <item>十三</item>
        <item>十四</item>
        <item>十五</item>
        <item>十六</item>
        <item>十七</item>
        <item>十八</item>
        <item>十九</item>
        <item>二十</item>
        <item>廿一</item>
        <item>廿二</item>
        <item>廿三</item>
        <item>廿四</item>
        <item>廿五</item>
        <item>廿六</item>
        <item>廿七</item>
        <item>廿八</item>
        <item>廿九</item>
        <item>三十</item>
    </string-array>

    <string-array name="solar_festival" tools:ignore="InconsistentArrays">
        <item>0101元旦</item>
        <item>0214情人节</item>
        <item>0308妇女节</item>
        <item>0312植树节</item>
        <item>0315消权日</item>
        <item>0401愚人节</item>
        <item>0422地球日</item>
        <item>0501劳动节</item>
        <item>0504青年节</item>
        <item>0601儿童节</item>
        <item>0701建党节</item>
        <item>0801建军节</item>
        <item>0910教师节</item>
        <item>1001国庆节</item>
        <item>1031万圣节</item>
        <item>1111光棍节</item>
        <item>1224平安夜</item>
        <item>1225圣诞节</item>
    </string-array>

    <string-array name="solar_term">
        <item>春分</item>
        <item>清明</item>
        <item>谷雨</item>
        <item>立夏</item>
        <item>小满</item>
        <item>芒种</item>
        <item>夏至</item>
        <item>小暑</item>
        <item>大暑</item>
        <item>立秋</item>
        <item>处暑</item>
        <item>白露</item>
        <item>秋分</item>
        <item>寒露</item>
        <item>霜降</item>
        <item>立冬</item>
        <item>小雪</item>
        <item>大雪</item>
        <item>冬至</item>
        <item>小寒</item>
        <item>大寒</item>
        <item>立春</item>
        <item>雨水</item>
        <item>惊蛰</item>
    </string-array>

    <string-array name="special_festivals">
        <item>母亲节</item>
        <item>父亲节</item>
        <item>感恩节</item>
    </string-array>

    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>

    <string-array name="week_string_array">
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>

    <string-array name="year_view_week_string_array">
        <item>S</item>
        <item>M</item>
        <item>T</item>
        <item>W</item>
        <item>T</item>
        <item>F</item>
        <item>S</item>
    </string-array>

    <string-array name="month_string_array">
        <item>JAN</item>
        <item>FEB</item>
        <item>MAR</item>
        <item>APR</item>
        <item>MAY</item>
        <item>JUN</item>
        <item>JUL</item>
        <item>AUG</item>
        <item>SEP</item>
        <item>OCT</item>
        <item>NOV</item>
        <item>DEC</item>
    </string-array>

    <integer-array name="trunk_integer_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>

    </integer-array>

    <string-array name="trunk_string_array">
        <item>辛</item>
        <item>壬</item>
        <item>癸</item>
        <item>甲</item>
        <item>乙</item>
        <item>丙</item>
        <item>丁</item>
        <item>戊</item>
        <item>己</item>
        <item>庚</item>
    </string-array>

    <integer-array name="branch_integer_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </integer-array>

    <string-array name="branch_string_array">
        <item>酉</item>
        <item>戌</item>
        <item>亥</item>
        <item>子</item>
        <item>丑</item>
        <item>寅</item>
        <item>卯</item>
        <item>辰</item>
        <item>巳</item>
        <item>午</item>
        <item>未</item>
        <item>申</item>

    </string-array>
</resources>
