<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/top_padding">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/headingTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/app_font_bold"
                android:padding="10dp"
                android:text="@string/settings"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_shape_bg"
                android:backgroundTint="@color/half_transparent_color"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_period_length" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:text="@string/period_length"
                        android:textColor="@color/app_primary_color"
                        android:textSize="@dimen/settings_text_size" />

                    <TextView
                        android:id="@+id/periodLengthTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="5 days"
                        android:textColor="@color/app_primary_color"
                        android:textSize="@dimen/settings_text_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_menstrual_cycle" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:text="@string/menstrual_cycle"
                        android:textColor="@color/app_primary_color"
                        android:textSize="@dimen/settings_text_size" />

                    <TextView
                        android:id="@+id/cycleLengthTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="28 days"
                        android:textColor="@color/app_primary_color"
                        android:textSize="@dimen/settings_text_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_luteal_phase" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:text="@string/luteal_phase"
                        android:textColor="@color/app_primary_color"
                        android:textSize="@dimen/settings_text_size" />

                    <TextView
                        android:id="@+id/lutealPhaseTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="5 days"
                        android:textColor="@color/app_primary_color"
                        android:textSize="@dimen/settings_text_size" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/recalculateBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_recalculate"
                        app:tint="@color/app_primary_color" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:text="@string/recalculate"
                        android:textColor="@color/app_primary_color"
                        android:textSize="@dimen/settings_text_size" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_shape_bg"
                android:backgroundTint="@color/half_transparent_color"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:id="@+id/themesSetting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_themes"
                        app:tint="@color/app_primary_color" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/app_font_bold"
                        android:text="@string/themes"
                        android:textColor="@color/app_primary_color"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_next"
                        android:visibility="gone"
                        app:tint="@color/black" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/themesRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_shape_bg"
                android:backgroundTint="@color/half_transparent_color"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:id="@+id/rateUsBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_rate_us"
                        app:tint="@color/app_primary_color" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:text="@string/rate_us"
                        android:textColor="@color/app_primary_color"
                        android:textSize="@dimen/settings_text_size" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/shareUsBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_share"
                        app:tint="@color/app_primary_color" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:text="@string/share_us"
                        android:textColor="@color/app_primary_color"
                        android:textSize="@dimen/settings_text_size" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/privacyPolicyBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_privacy_policy"
                        app:tint="@color/app_primary_color" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:text="@string/privacy_policy"
                        android:textColor="@color/app_primary_color"
                        android:textSize="@dimen/settings_text_size" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>
